# Detecting-Exposed-API-Keys-in-Code-Repositories

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark_report.json  pyproject.toml  requirements.txt  test_entropy_improved.py  train_classifier.py
.github/workflows/: secretguard.yml
docs/: TriFusion_Project_Report.docx  generate_diagrams.py  generate_report.js  package-lock.json  package.json  rpt_ch1ch2.js  rpt_ch3.js  rpt_ch4ch5.js  rpt_cover.js  rpt_helpers.js  rpt_main.js
secretguard/: classifier.py  classifier_meta.json  classifier_model.pkl  cli.py  detector.py  entropy.py  fp_suppressor.py  git_history_scanner.py  pipeline.py  rules.toml
